@@ -1,11 +1,13 @@
 package org.itsimulator.germes.app.infra.util;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.Modifier;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import org.itsimulator.germes.app.infra.exception.ConfigurationException;
+import org.itsimulator.germes.app.infra.util.annotation.Ignore;
 
 /*
  * Contains reflection-related utility operations
@@ -44,18 +46,41 @@ public class ReflectionUtil {
 	public static List<String> findSimilarFields(Class<?> clz1, Class<?> clz2)
 			throws ConfigurationException {
 		try {
-			Field[] fields = clz1.getDeclaredFields();
-			List<String> targetFields = Stream.of(clz2.getDeclaredFields())
-					.map((field) -> field.getName())
-					.collect(Collectors.toList());
-			return Stream.of(fields)
-					.map((field) -> field.getName())
-					.filter((name) -> targetFields.contains(name))
-					.collect(Collectors.toList());
-		} catch (SecurityException ex) {
-			throw new ConfigurationException(ex);
+			List<Field> fields = getFields(clz1);
+			
+			List<String> targetFields = getFields(clz2).stream()
+					.filter(field -> !field.isAnnotationPresent(Ignore.class))
+					.map(field -> field.getName()) 
+					.toList();
+			return fields.stream()
+					.filter(field -> !field.isAnnotationPresent(Ignore.class))
+					.filter(field -> !Modifier.isFinal(field.getModifiers()) 
+							&& !Modifier.isStatic(field.getModifiers()))
+					.map(field -> field.getName())
+					.filter(name -> targetFields.contains(name))
+					.toList();
+		} catch (SecurityException e) {
+			throw new ConfigurationException(e);
 		}
 	}
+	
+	/**
+	 * Returns all declared fields of the specified classes and all superclasses
+	 * 
+	 * @param cls
+	 * @return
+	 */
+	public static <T> List<Field> getFields(Class<?> cls) {
+		List<Field> fields = new ArrayList<>();
+		
+		while(cls != null) {
+			fields.addAll(Arrays.asList(cls.getDeclaredFields()));
+			cls = cls.getSuperclass();
+		}
+		return fields;
+	}
+	
+	
 
 	/**
 	 * Copy specified fields values from source to destination objects
@@ -64,31 +89,48 @@ public class ReflectionUtil {
 	 * @param dest
 	 * @param fields
 	 */
-	public static void copyFields(Object src, Object dest, List<String> fields)
-			throws ConfigurationException {
+	public static void copyFields(Object src, Object dest, List<String> fields) throws ConfigurationException {
 		Checks.checkParameter(src != null, "Source object is not initialized");
 		Checks.checkParameter(dest != null,
 				"Destination object is not initialized");
 		try {
 			for (String field : fields) {
-				Field fld = src.getClass().getDeclaredField(field);
+				Field fld = getField(src.getClass(), field);
 				// Skip unknown fields
 				if (fld != null) {
 					fld.setAccessible(true);
 					Object value = fld.get(src);
 
-					Field fldDest = dest.getClass().getDeclaredField(field);
-
+					Field fldDest = getField(dest.getClass(), field);
 					if (fldDest != null) {
 						fldDest.setAccessible(true);
 						fldDest.set(dest, value);
 					}
 				}
 			}
-		} catch (SecurityException | ReflectiveOperationException
-				| IllegalArgumentException ex) {
+		} catch (SecurityException | ReflectiveOperationException | IllegalArgumentException ex) {
 			throw new ConfigurationException(ex);
 		}
+	}
+	
+	/**
+	 * Returns class field by its name. Thes method supports base classes as 
+	 * well 
+	 * 
+	 * @param clz
+	 * @param name
+	 * @return
+	 */
+	public static <T> Field getField(final Class<?> clz, final String name) {
+		Class<?> current = clz;
+		while (clz != null) {
+			try {
+				return current.getDeclaredField(name);
+			} catch (NoSuchFieldException | SecurityException e) {
+				current = current.getSuperclass();
+			}
+		}
+		throw new ConfigurationException("No field " + name + " in the class " + clz);
 	}
 
 }
